# Rural-Low-Voltage-Detection

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  PROJECT_STATUS.md  README.md  Research_Guidelines.md  TASKS.md  THESIS_PLAN.md  main.tex  pyproject.toml  文献搜索结果汇总.md  研究资料收集报告.md  论文初稿.md  论文审阅报告.md
.claude/: .auto_commit_track  SKILLS_REFERENCE.md  WRITING_GUIDE.md  ralph-loop.local.md  test_hook.txt
.claude/agents/: thesis-format-checker.md  thesis-plotter.md  timeseries-experiment-master.md
.claude/commands/: plot.md  train.md
.claude/scripts/: auto_commit_check.sh  auto_commit_on_stop.sh  periodic_auto_commit.sh  protect_models.sh  smart_commit_msg.sh
.github/: .copilot-commit-message-instructions.md  CI_CD_ARCHITECTURE.md  CI_CD_GUIDE.md  CI_CD_IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  copilot-instructions.md  markdown-link-check-config.json
.github/scripts/: run-local-ci.sh
.github/workflows/: ci.yml  code-quality.yml  documentation.yml  pr-validation.yml  security.yml  testing.yml
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md  task_completion.md
code/: EXPERIMENT_PLAN.md  README.md  data_processor.py  organize_resources.py  requirements.txt  result_anomaly_detection.txt  run.py  test_models.py  web_scraper.py
code/analysis/: __init__.py  report_generator.py  result_manager.py
code/data_provider/: __init__.py  data_factory.py  data_loader.py
code/dataset/: PecanStreet_Application.md  README.md  download_kaggle_datasets.sh  kaggle_download_guide.md
code/demo/: README.md  app.py  config.py  requirements.txt
code/docs/: README_论文写作材料索引.md  TimesNet算法描述_论文写作材料.md  VoltageTimesNet_v2_results.md  alpha消融实验结果_写作材料.md  supplementary_experiment_report.md  全文一致性检查_写作材料.md  可解释性分析_写作材料.md  图表生成指南_写作材料.md  图表资源清单_论文写作材料.md  实验结果汇总_论文写作材料.md  序列长度消融实验结果_写作材料.md  文档总结_Notion任务.md  消融实验处理方案_写作材料.md  讨论部分_写作材料.md  (+3 more)
docs/: CHAPTER_2_WRITING_PLAN.md  DATA_ENGINEERING_OPTIMIZATION_REPORT.md  index.html
format_instructions/: masters.docx  硕士论文格式指南.md
papers/: LSTM时序预测与电力系统异常检测 - 完整研究资源库索引.md  LSTM时序预测与电力系统异常检测 - 文献搜索结果.md  README.md
references/: references.bib
sections/: abstract.tex  conclusion.tex  experimental_setup.tex  introduction.tex  literature_review.tex  methodology.tex  results_analysis.tex
thesis/: bjfuthesis-main.tex  bjfuthesis.cls
(+469 files in other folders)
